--- a/autoreply.yaml
+++ b/autoreply.yaml
@@ -1,5 +1,5 @@
 # modules/autoreply 下的自动回复文本配置
-'你是谁': '我是你爹'
+'你是谁': '我是你爹!'
 
 # 单行文本
 hello: world
@@ -14,4 +14,6 @@ hello: world
   │ 拿铁  ├╯
   │ ██  │
   ╰───╯
+
+'test': '测试'
  
